# Langchain

./: .gitignore  pyproject.toml  requirements.txt
Embeddingmodels/: document_similarity.py  embeding.py  opeanai.py
LLM/: llm.py
langchain_update/: langchain.ipynb  tool.ipynb
prompts/: chatbot.py  chatprompt.py  prompt_generator.py  prompt_template.py  prompt_ui.py
